--- a/public/product.html
+++ b/public/product.html
@@ -77,15 +77,43 @@
         <div class="main-product">
           <div class="pro-images">
             <div class="side-pro">
-              <img src="images/p1.webp" alt="product" />
-              <img src="images/p2.webp" alt="product" />
-              <img src="images/p3.webp" alt="product" />
-              <img src="images/p4.webp" alt="product" />
-              <img src="images/p5.webp" alt="product" />
-              <img src="images/p6.webp" alt="product" />
+              <img
+                src="images/p1.webp"
+                alt="product"
+                onclick="changeImg(this)"
+              />
+              <img
+                src="images/p2.webp"
+                alt="product"
+                onclick="changeImg(this)"
+              />
+              <img
+                src="images/p3.webp"
+                alt="product"
+                onclick="changeImg(this)"
+              />
+              <img
+                src="images/p4.webp"
+                alt="product"
+                onclick="changeImg(this)"
+              />
+              <img
+                src="images/p5.webp"
+                alt="product"
+                onclick="changeImg(this)"
+              />
+              <img
+                src="images/p6.webp"
+                alt="product"
+                onclick="changeImg(this)"
+              />
             </div>
             <div class="main-pro">
-              <img src="images/p2.webp" alt="product" />
+              <div class="aa">
+                <img src="images/p1.webp" alt="product" id="imgs" />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+
               <div class="buy-btn">
                 <button type="button" class="add-cart">
                   <i class="fa-solid fa-cart-shopping"></i>ADD TO CART
