--- a/public/home.html
+++ b/public/home.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="images/titlelogo.jpg"
-      type="images/icon type"
-      style="border-radius: 50%"
-    />
+    <link rel="icon" href="images/titlelogo.jpg" type="images/icon type" />
     <title>
       Online Shopping Site for Mobiles, Electronics, furniture, Grocery,
       Lifestyle, Books & More. Best Offers!!
@@ -56,7 +51,7 @@
       <div><i class="fa-solid fa-cart-shopping"></i>Cart</div>
       <div><i class="fa-solid fa-store"></i>Become a Seller</div>
       <div class="dots">
-        <button class="dots-btn">
+        <button class="dots-btn" title="More">
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </button>
         <div class="dropdown-content">
@@ -93,7 +88,7 @@
               src="https://rukminim1.flixcart.com/fk-p-flap/80/80/image/0d75b34f7d8fbcb3.png?q=100"
               alt="Fashion"
             />
-            <p class="p-btn">Fashion</p>
+            <p class="p-btn">Fashion <i class="fa-solid fa-angle-down"></i></p>
             <div class="dropdown-content">
               <a href="#">Men's Top Wear </a>
               <a href="#">Men's Bottom Wear</a>
@@ -114,7 +109,9 @@
               src="https://rukminim1.flixcart.com/flap/80/80/image/69c6589653afdb9a.png?q=100"
               alt="Electronics"
             />
-            <p class="p-btn">Electronics</p>
+            <p class="p-btn">
+              Electronics <i class="fa-solid fa-angle-down"></i>
+            </p>
             <div class="dropdown-content">
               <a href="#">Audio</a>
               <a href="#">Electronics GST Store</a>
@@ -138,7 +135,9 @@
               src="https://rukminim1.flixcart.com/flap/80/80/image/ab7e2b022a4587dd.jpg?q=100"
               alt="Home & Furniture"
             />
-            <p class="p-btn">Home & Furniture</p>
+            <p class="p-btn">
+              Home & Furniture <i class="fa-solid fa-angle-down"></i>
+            </p>
             <div class="dropdown-content">
               <a href="#">Home Furnishings</a>
               <a href="#">Furniture</a>
@@ -177,7 +176,9 @@
               src="https://rukminim1.flixcart.com/flap/80/80/image/dff3f7adcf3a90c6.png?q=100"
               alt="Beauty , Toys & More"
             />
-            <p class="p-btn">Beauty , Toys & More</p>
+            <p class="p-btn">
+              Beauty , Toys & More <i class="fa-solid fa-angle-down"></i>
+            </p>
             <div class="dropdown-content">
               <a href="#">Beauty & Personal Care</a>
               <a href="#">Men's Grooming</a>
